--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,11 +22,5 @@ jobs:
     - name: Install GoogleTest libraries
       run: sudo apt-get install libgmock-dev libgtest-dev
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
     - name: Run tests
-      run: ${{github.workspace}}/run-tests.yml
+      run: ${{github.workspace}}/run-tests.sh
