--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,4 +1,4 @@
-name: clang-format-check
+name: format-check
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  clang-format-check:
+  check:
     runs-on: ubuntu-latest
 
     steps:
