--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(CppLeetcode)
+project(CppPlayground)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# set(CMAKE_CXX_FLAGS_DEBUG "-fsanitize=address,
+# set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
 find_package(GTest REQUIRED)
-add_executable(cpp_leetcode "main.cpp")
-target_link_libraries(cpp_leetcode PRIVATE GTest::gtest_main GTest::gmock_main)
+add_executable(cpp_playground "main.cpp")
+target_link_libraries(cpp_playground PRIVATE GTest::gtest_main GTest::gmock_main)
 
 enable_testing()
-gtest_discover_tests(cpp_leetcode)
+gtest_discover_tests(cpp_playground)
