--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -16,6 +16,9 @@ jobs:
     - name: test
       run: find . -name '*.cpp' -not -path './build/*'
 
+    - name: testd
+      run: git st
+
     - name: clang-format files
       run: find . -name '*.cpp' -not -path './build/*' | xargs -n1 clang-format -i
 
