--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -17,7 +17,7 @@ jobs:
       run: find . -name '*.cpp' -not -path './build/*'
 
     - name: testd
-      run: git st
+      run: git status
 
     - name: clang-format files
       run: find . -name '*.cpp' -not -path './build/*' | xargs -n1 clang-format -i
