--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(CppPlayground)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# set(CMAKE_CXX_CLANG_TIDY clang-tidy)
+set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
-find_package(GTest REQUIRED)
+# find_package(GTest REQUIRED)
 add_executable(cpp_playground "main.cpp")
-target_link_libraries(cpp_playground PRIVATE GTest::gtest_main GTest::gmock_main)
+# target_link_libraries(cpp_playground PRIVATE GTest::gtest_main GTest::gmock_main)
 
-enable_testing()
-gtest_discover_tests(cpp_playground)
+# enable_testing()
+# gtest_discover_tests(cpp_playground)
