Optimize Github actions CI by just checking last 10 commits

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      fetch-depth: "10"
+      fetch-depth: 10
 
     - name: Update platform
       run: sudo apt-get update
