--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,10 +1,6 @@
 name: format-check
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [push, pull_request]
 
 jobs:
   check:
