--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,14 +24,8 @@ target_compile_options(
 target_link_options(main PRIVATE -fsanitize=address -fsanitize=undefined)
 
 add_executable(leetcode "leetcode.cpp")
-find_package(GTest REQUIRED)
-target_link_libraries(leetcode GTest::gtest_main GTest::gmock)
-enable_testing()
-gtest_discover_tests(leetcode)
-
-add_executable(benchmark "benchmark.cpp")
 target_compile_options(
-  main
+  leetcode
   PRIVATE -g
           -Wall
           -Wpedantic
@@ -45,7 +39,13 @@ target_compile_options(
           -Werror
           -fsanitize=address
           -fsanitize=undefined)
-target_link_options(main PRIVATE -fsanitize=address -fsanitize=undefined)
+target_link_options(leetcode PRIVATE -fsanitize=address -fsanitize=undefined)
+find_package(GTest REQUIRED)
+target_link_libraries(leetcode GTest::gtest_main GTest::gmock)
+enable_testing()
+gtest_discover_tests(leetcode)
+
+add_executable(benchmark "benchmark.cpp")
 find_package(benchmark REQUIRED)
 target_compile_options(benchmark PRIVATE -O3)
 target_link_libraries(benchmark PRIVATE benchmark::benchmark_main)
