--- a/.github/workflows/run-leetcode-tests.yml
+++ b/.github/workflows/run-leetcode-tests.yml
@@ -1,4 +1,4 @@
-name: run-tests
+name: run-leetcode-tests
 
 on: [push, pull_request]
 
@@ -18,4 +18,4 @@ jobs:
       run: sudo apt-get install libgmock-dev libgtest-dev libbenchmark-dev llvm clang
 
     - name: Run tests
-      run: ${{github.workspace}}/run-tests.sh || exit 1
+      run: run-tests.sh || exit 1
