--- a/.github/workflows/run-leetcode-tests.yml
+++ b/.github/workflows/run-leetcode-tests.yml
@@ -18,4 +18,4 @@ jobs:
       run: sudo apt-get install libgmock-dev libgtest-dev libbenchmark-dev llvm clang
 
     - name: Run tests
-      run: ../run-leetcode-tests.sh || exit 1
+      run: ${{github.workspace}}/.github/run-leetcode-tests.sh || exit 1
