--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
+add_executable(fast "fast.cpp")
+set_target_properties(fast PROPERTIES CXX_CLANG_TIDY "")
+
 add_executable(main "main.cpp")
 target_compile_options(
   main
