Combine POST_BUILD commands for assembly.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,9 +75,7 @@ target_compile_options(
 add_custom_command(
   TARGET assembly
   POST_BUILD
-  COMMAND llvm-cxxfilt < ${CMAKE_BINARY_DIR}/assembly.s >
-          ${CMAKE_BINARY_DIR}/assembly_demangled.s)
-add_custom_command(
-  TARGET assembly
-  POST_BUILD
-  COMMAND cat ${CMAKE_BINARY_DIR}/assembly_demangled.s)
+  COMMAND
+    llvm-cxxfilt < ${CMAKE_BINARY_DIR}/assembly.s >
+    ${CMAKE_BINARY_DIR}/assembly_demangled.s && cat
+    ${CMAKE_BINARY_DIR}/assembly_demangled.s)
